--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Hello GitHub</h1>
+    <h1>Hello GitHub1</h1>
     
 </body>
 </html>
